including 26 upgrade and some deprecation updates